<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.2.5</version>
    <relativePath /> <!-- lookup parent from repository -->
  </parent>
  <groupId>io.pivio</groupId>
  <artifactId>pivio-application</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>pivio-application</name>
  <packaging>pom</packaging>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <type>pom</type>
        <version>3.2.5</version>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>


  <modules>
    <!-- <module>pivio-web</module> -->
    <module>pivio-server</module>
    <module>schema-module</module>
  </modules>

  <properties>
    <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
    <spring.boot.version>3.2.5</spring.boot.version>
    <java.version>21</java.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <maven.compiler.release>21</maven.compiler.release>
  </properties>

</project>
